<resources>
    <string name="app_name">ECOmmerce</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="description">Organic lemons are citrus fruits grown without the use of synthetic pesticides, fertilizers, or genetically modified organisms (GMOs). They are cultivated using organic farming methods that prioritize soil health, biodiversity, and ecological balance. More</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="detail_image_content_description">detail image</string>
    <string name="item_image">Item Image</string>
    <string name="delete_item">Delete Item</string>
    <string name="increase_quantity">Tambah Jumlah</string>
    <string name="decrease_quantity">Kurangi Jumlah</string>
    <string name="sub_total">Sub Total</string>
    <string name="shipping_charge">Shipping Charge</string>
    <string name="searchbar_hint">Search your product</string>
    <string name="total">Total</string>
    <string name="welcome_text_description">Your one-stop shop for eco-friendly products!</string>
    <string name="profile">profile name</string>
    <string name="profile_email">Profile_email@gmail.com</string>
    <string name="about_me">About me</string>
    <string name="my_address">My location</string>
    <string name="transaction">Transaction</string>
    <string name="sign_out">Sign out</string>
    <string name="cart">Cart</string>
    <string name="show_recommendation">Show Recommendation Product!</string>
    <string name="your_web_client_id">292189679330-4j3hsf621eeh0o6v3ighmi908fnqv5gt.apps.googleusercontent.com</string>
</resources>

