<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CartActivity">

    <!-- RecyclerView to display the list of items in the cart -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_cart" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="412dp"
        android:layout_height="277dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="453dp">

        <androidx.cardview.widget.CardView
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_total"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="53dp" />

        <TextView
            android:id="@+id/textShippingCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_charge"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="83dp" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="149dp" />

        <Button
            android:id="@+id/buttonCheckOut"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_main"
            android:text="Check Out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="192dp" />

        <TextView
            android:id="@+id/total_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="Total Price"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="147dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- TextView to display the total price -->


</androidx.constraintlayout.widget.ConstraintLayout>

